--- a/src/views/layouts/layout.ejs
+++ b/src/views/layouts/layout.ejs
@@ -18,6 +18,7 @@
     <!-- css files -->
     <link rel="stylesheet" href="../../public/css/blog/blogDetail.css">
     <link rel="stylesheet" href="/css/home/home.css">
+    <link rel="stylesheet" href="/css/blog/blogList.css">
     <link rel="stylesheet" href="/css/highlightText.css">
     <link rel="stylesheet" href="/css/form.css">
     <link rel="stylesheet" href="/css/alert.css">
