--- a/src/views/templates/auth/signup.ejs
+++ b/src/views/templates/auth/signup.ejs
@@ -16,4 +16,6 @@
         <input type="submit" value="Signup">
     </form>
     
-    <p><a href="/api/login">Already have an account.</a></p>
+    <div class="links-container">
+        <p><a href="/api/login">Already have an account.</a></p>
+    </div>
