--- a/src/views/templates/auth/login.ejs
+++ b/src/views/templates/auth/login.ejs
@@ -1,11 +1,43 @@
-    <div class="section-title">
-        <h1>Signin</h1>
+<div id="login-page-container">
+    <div class="section-title ">
+        <h1 class="text-white">Signin</h1>
     </div>
 
-    <form action="/api/login" method="post"  class="vertical-form">
+    <form action="/api/login" method="post" class="vertical-form">
         <input type="text" name="username" placeholder="Username">
         <input type="password" name="password" placeholder="Password">
         <input type="submit" value="Login">
     </form>
-    <p><a href="/api/signup">Dont have an account yet.</a></p>
-    <p><a href="/api/forgot-password">Forgot password ?</a></p>
+    <div class="links-container">
+        <p><a class="text-white" href="/api/signup">Dont have an account yet.</a></p>
+        <p><a class="text-white" href="/api/forgot-password">Forgot password ?</a></p>
+    </div>
+</div>
+
+<style>
+    #login-page-container {
+        background-image: url("../../images/natural-background.jpg");
+        background-size: cover;
+        background-position: center;
+        /* Centers the background image */
+        height: 100%;
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        /* Center-align text within the container */
+    }
+    .links-container p {
+    margin: 5px 0; /* Adjust margin for individual links */
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8); /* Adding shadow to the links */
+}
+.links-container{
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+.section-title h1 {
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8); /* Adding shadow to the h1 */
+}
+</style>
