--- a/src/views/templates/auth/login.ejs
+++ b/src/views/templates/auth/login.ejs
@@ -1,6 +1,6 @@
 <div id="login-page-container">
     <div class="section-title ">
-        <h1 class="text-white">Signin</h1>
+        <h1 class="text-white">Ingresa</h1>
     </div>
 
     <form action="/api/login" method="post" class="vertical-form">
