--- a/src/views/templates/footer.ejs
+++ b/src/views/templates/footer.ejs
@@ -2,7 +2,7 @@
     <div>
       <div class="row">
         <div class="col-md-4">
-            <img class="footer-icon" src="images/white-logo-buonavibra.png" alt="">
+            <img class="footer-icon" src="../../images/white-logo-buonavibra.png" alt="">
           <h5>Acerca</h5>
           <p>Bienvenidos a mi espacio de bienestar! quiero que recorramos juntos el camino del Kundalini Yoga.</p>
         </div>
