--- a/src/public/css/blog/blogList.css
+++ b/src/public/css/blog/blogList.css
@@ -1,8 +1,9 @@
 /* courses.css */
 .blogs-page-container {
-    background-image: url("../../images/taller-nube.jpg");
+    background-image: url("../../images/mountain-yoga.jpg");
     background-size: cover;
     background-position: center; /* Centers the background image */
+    height: 100%;
     height: 100%;
     width: 100vw;
   }
