--- a/src/views/templates/coursesOwned.ejs
+++ b/src/views/templates/coursesOwned.ejs
@@ -1,19 +1,28 @@
 <div class="courses-container">
   <div class="section-title">
-    <h1>My Courses Library</h1>
+    <h1>Mis cursos</h1>
   </div>
   <div class="courses-grid">
-    <% courses.reverse().forEach((course, index) => { %>
+    <% courses.reverse().forEach((course, index)=> { %>
       <div class="course-item">
         <a href="/api/course/<%= course.id %>">
           <img src="<%= course.thumbnail %>" alt="thumbnail-<%= course.slug %>" />
-          <p class="timestamp"><%= course.updated_at %></p>
+          <p class="timestamp">
+            <%= course.updated_at %>
+          </p>
           <div class="author">
             <img src="<%= course.author.avatar %>" alt="User Avatar" class="avatar">
-            <p class="author-info"><strong><%= course.author.username %></strong> • <%=course.author.name%></p>
+            <p class="author-info"><strong>
+                <%= course.author.username %>
+              </strong> • <%=course.author.name%>
+            </p>
           </div>
-          <h2><%= course.title %></h2>
-          <p><%= course.description %></p>
+          <h2>
+            <%= course.title %>
+          </h2>
+          <p>
+            <%= course.description %>
+          </p>
         </a>
         <% if (isAdmin) {%>
           <div class="course-actions">
@@ -24,13 +33,13 @@
               <a href="/api/course/<%= course.id %>/delete?courseId=<%= course.id %>">Delete</a>
             </p>
           </div>
-        <% } %>
+          <% } %>
 
       </div>
-      <% if ((index + 1) % 4 === 0 && index !== courses.length - 1) { %>
-        </div>
-        <div class="courses-grid">
-      <% } %>
-    <% }); %>
+      <% if ((index + 1) % 4===0 && index !==courses.length - 1) { %>
+  </div>
+  <div class="courses-grid">
+    <% } %>
+      <% }); %>
   </div>
 </div>
