--- a/src/views/templates/navbar.ejs
+++ b/src/views/templates/navbar.ejs
@@ -12,7 +12,7 @@
           <a class="nav-link active" aria-current="page" href="/"><i class="fas fa-home"> Home</i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/api/courses?page=1&perPage=6"><i class="fas fa-book"></i> Courses</a>
+          <a class="nav-link" href="/api/courses?page=1&perPage=6"><i class="fas fa-book"></i> Cursos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/api/blog?page=1&perPage=6"><i class="fas fa-book"></i> Blog</a>
@@ -21,7 +21,7 @@
         <!-- signedin links -->
         <% if (user && user.name) { %>
           <li class="nav-item">
-            <a class="nav-link" href="/api/courses-owned?page=1&perPage=6"><i class="fas fa-graduation-cap"></i> My courses</a>
+            <a class="nav-link" href="/api/courses-owned?page=1&perPage=6"><i class="fas fa-graduation-cap"></i> Mis Cursos</a>
           </li>
 
           <!-- MAIN DROPDOWN -->
@@ -33,30 +33,30 @@
                 <i class="fas fa-ellipsis-v"></i> <!-- Three dots icon -->
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/api/course/create"><i class="fas fa-plus-circle"></i> Create
-                    course</a></li>
-                <li><a class="dropdown-item" href="/api/blog/create"><i class="fas fa-plus-circle"></i> Create
+                <li><a class="dropdown-item" href="/api/course/create"><i class="fas fa-plus-circle"></i> Crear
+                    curso</a></li>
+                <li><a class="dropdown-item" href="/api/blog/create"><i class="fas fa-plus-circle"></i> Crear
                     Blog</a></li>
-                <li><a class="dropdown-item" href="/api/admin/users"><i class="fas fa-users-cog"></i> Users panel</a>
+                <li><a class="dropdown-item" href="/api/admin/users"><i class="fas fa-users-cog"></i> Panel de Usuarios</a>
                 </li>
                 <% if (user && user.avatar) { %>
                   <!-- Update Profile with user's avatar -->
                   <li><a class="dropdown-item" href="/api/user-update/<%= user.id %>/confirm">
                       <img src="<%= user.avatar %>" alt="User Avatar" class="avatar">
-                      Update Profile
+                      Editar Perfil
                     </a></li>
                   <% } else { %>
                     <!-- If no avatar, use a placeholder -->
                     <li><a class="dropdown-item" href="/api/user-update/<%= user.id %>/confirm">
                         <img src="images/user.png" alt="Placeholder Avatar" class="avatar">
-                        Update Profile
+                        Editar Perfil
                       </a></li>
                     <% } %>
                       <!-- sign out -->
                       <% if (user) { %>
                         <li><a class="dropdown-item" href="/api/logout">
                           <i class="fas fa-sign-out-alt"></i>
-                          Signout
+                          Salir
                         </a></li>
                         <% } %>
               </ul>
@@ -70,12 +70,12 @@
                 <!-- sign in -->
                 <li class="nav-item">
                   <a class="nav-link" href="/api/login"><i class="fas fa-graduation-cap"></i><i
-                      class="fas fa-sign-in-alt"></i> Signin</a>
+                      class="fas fa-sign-in-alt"></i> Ingresar</a>
                 </li>
                 <!-- sign up -->
                 <li class="nav-item">
                   <a class="nav-link" href="/api/signup"><i class="fas fa-graduation-cap"></i><i
-                      class="fas fa-user-plus"></i> Signup</a>
+                      class="fas fa-user-plus"></i> Registrar</a>
                 </li>
                 <% } %>
 
