--- a/src/views/templates/courseDetail.ejs
+++ b/src/views/templates/courseDetail.ejs
@@ -18,10 +18,10 @@
     <!-- PLAYER -->
     <!-- ========================================================= -->
     <div>
-            <div class="container mb-4">
+            <div class="video-container mb-4">
                 <div class="row">
                     <div class="col-lg-12">
-                        <iframe  src="<%= course.video_link %>" width="560" height="315" sandbox="allow-same-origin" frameborder="0" autoplay allowfullscreen controls></iframe>
+                        <iframe  src="<%= course.video_link %>" width="560" height="315" allowfullscreen controls></iframe>
                     </div>
                 </div>
             </div>
