--- a/src/views/templates/courseOverview.ejs
+++ b/src/views/templates/courseOverview.ejs
@@ -1,6 +1,6 @@
 <div class="course-container">
-    <div class="course-overview">
-        <div class="section-title">
+    <div class="course-overview mt-4">
+        <div class="section-title2">
             <h1>Course Overview</h1>
         </div>
         <hr>
