--- a/src/views/templates/courseEnroll.ejs
+++ b/src/views/templates/courseEnroll.ejs
@@ -1,33 +1,35 @@
 <div class="page-container">
     <div class='course-overview'>
-        <div class="section-title2 mt-4">
+        <div class="section-title2 mt-4 mb-4">
             <h1>Payment Details</h1>
         </div>
         <!-- Payment Details -->
-        <img src="<%= course.thumbnail %>" alt="<%= course.title %> Image">
+        <img class="mb-4" src="<%= course.thumbnail %>" alt="<%= course.title %> Image">
         <h2>
             <%= course.title %>
         </h2>
+        <p>
+            <%= course.description %>
+        </p>
         <div>
 
             <div class="row align-items-center">
+                instructor:
                 <div class="col-auto">
-                    instructor: 
                     <img src="<%= course.author.avatar %>" alt="User Avatar" class="rounded-circle me-2"
                         style="width: 25px; height: 25px; object-fit: cover;">
+                    <strong>
+                        <%= course.author.username %>
+                    </strong> • <%= course.author.name %>
                 </div>
-                <div class="col">
-                    <p class="mb-0">
-                        <strong><%= course.author.username %></strong> • <%= course.author.name %>
-                    </p>
-                </div>
+
             </div>
-            
-            <p>Duration: <%= course.length %>
-            </p>
-            <p class="price-text">USD<%= course.usd_price %> | ARS<%= course.ars_price %>
-            </p>
         </div>
+
+        <p>Duration: <%= course.length %>
+        </p>
+        <p class="price-text">USD<%= course.usd_price %> | ARS<%= course.ars_price %>
+        </p>
     </div>
 
     <div class='payment-options'>
