--- a/src/views/layouts/layout.ejs
+++ b/src/views/layouts/layout.ejs
@@ -33,11 +33,15 @@
     <link rel="stylesheet" href="/css/courseCreateModule.css">
     <link rel="stylesheet" href="/css/usersPanel.css">
     <link href="https://fonts.googleapis.com/css2?family=Sohne:wght@400;700&display=swap" rel="stylesheet">
+    <!-- box icons -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    
+
 
 </head>
 <body>
     <!-- Common header -->
-    <%- include ('navbar') -%>
+    <%- include ('navbar2') -%>
     <%- include ('alert') -%>
     
     <!-- dynamic body-->
