--- a/src/views/templates/navbar2.ejs
+++ b/src/views/templates/navbar2.ejs
@@ -1,17 +1,18 @@
 <header class="header">
     <a href="#" class="logo">Logo</a>
 
-    <label for="" class="icons">
+    <input type="checkbox" id="check">
+    <label for="check" class="icons">
         <i class='bx bx-menu' id="menu-icon"></i>
         <i class='bx bx-x' id="close-icon"></i>
     </label>
 
     <nav class="navbar">
-        <a href="#">Home</a>
-        <a href="#">Acerca</a>
-        <a href="#">Cursos</a>
-        <a href="#">ingresar</a>
-        <a href="#">Registrar</a>
+        <a href="#" style="--i:0;">Home</a>
+        <a href="#" style="--i:1;">Acerca</a>
+        <a href="#" style="--i:2;">Cursos</a>
+        <a href="#" style="--i:3;">ingresar</a>
+        <a href="#" style="--i:4;">Registrar</a>
     </nav>
 </header>
 
@@ -49,6 +50,21 @@
         z-index: -1;
     }
 
+    .header::after { /* moving reflect inside header */
+        content: '';
+        position: absolute;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(90deg, transparent, rgba(255,255,255, .4));
+        transition: .5s;
+    }
+
+    .header:hover::after { /* on hover move*/
+        left: 100%;
+    }
+
     .logo {
         font-size: 2rem;
         color: #fff;
@@ -62,6 +78,10 @@
         text-decoration: none;
         font-weight: 500;
         margin-left: 2.5rem;
+    }
+
+    #check {
+        display: none;
     }
 
     .icons {
@@ -89,8 +109,18 @@
             display: inline-flex;
         }
 
+        #check:checked~.icons #menu-icon {
+            /* hide on click*/
+            display: none;
+        }
+
         .icons #close-icon {
             display: none;
+        }
+
+        #check:checked~.icons #close-icon {
+            /* show on click*/
+            display: block;
         }
 
         .navbar {
@@ -98,10 +128,16 @@
             top: 100%;
             left: 0;
             width: 100%;
-            height: 17.7rem;
+            height: 0;
             background: rgba(0, 0, 0, .1);
             backdrop-filter: blur(50px);
             box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+            overflow: hidden;
+            transition: .3s ease;
+        }
+        
+        #check:checked~.navbar { /* on click display navbar div*/
+            height: 17.7rem;
         }
 
         .navbar a {
@@ -109,6 +145,14 @@
             font-size: 1.1rem;
             margin: 1.5rem 0;
             text-align: center;
+            transition: .3s ease;
+            opacity: 0;
+        }
+        
+        #check:checked~.navbar a { /* on click hide navbar div*/
+            transform: translateY(0);
+            opacity: 1;
+            transition-delay: calc(.15s * var(--1));
         }
     }
 </style>
