--- a/src/views/templates/navbar2.ejs
+++ b/src/views/templates/navbar2.ejs
@@ -8,14 +8,16 @@
     </label>
 
     <nav class="navbar">
-        <a href="#" style="--i:0;">Home</a>
-        <a href="#" style="--i:1;">Acerca</a>
-        <a href="#" style="--i:2;">Cursos</a>
+        <a href="/" style="--i:0;">Home</a>
+        <a href="/#about" style="--i:1;">Acerca</a>
+        <a href="/api/courses?page=1&perPage=6" style="--i:2;">Cursos</a>
+        <a href="/api/blog?page=1&perPage=6" style="--i:2;">Blogs</a>
         <a href="#" style="--i:3;">ingresar</a>
         <a href="#" style="--i:4;">Registrar</a>
     </nav>
 </header>
 
+<!-- =====================\ CSS /=============================== -->
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
 
