--- a/src/views/templates/navbar2.ejs
+++ b/src/views/templates/navbar2.ejs
@@ -136,6 +136,8 @@
             box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
             overflow: hidden;
             transition: .3s ease;
+            flex-direction: column;
+            align-items: center;
         }
         
         #check:checked~.navbar { /* on click display navbar div*/
@@ -152,6 +154,7 @@
         }
         
         #check:checked~.navbar a { /* on click hide navbar div*/
+            display: block;
             transform: translateY(0);
             opacity: 1;
             transition-delay: calc(.15s * var(--1));
