--- a/src/views/templates/auth/login.ejs
+++ b/src/views/templates/auth/login.ejs
@@ -1,17 +1,19 @@
 <div id="login-page-container">
+    <div id="login-page-content">
     <div class="section-title ">
         <h1 class="text-white">Ingresa</h1>
     </div>
 
     <form action="/api/login" method="post" class="vertical-form">
-        <input type="text" name="username" placeholder="Username">
-        <input type="password" name="password" placeholder="Password">
+        <input type="text" name="username" placeholder="Nombre de Usuario">
+        <input type="password" name="password" placeholder="contraseña">
         <input type="submit" value="Login">
     </form>
     <div class="links-container">
-        <p><a class="text-white" href="/api/signup">Dont have an account yet.</a></p>
-        <p><a class="text-white" href="/api/forgot-password">Forgot password ?</a></p>
+        <p><a class="text-white" href="/api/signup">No tengo cuenta aún.</a></p>
+        <p><a class="text-white" href="/api/forgot-password">Olvidaste tu contraseña ?</a></p>
     </div>
+</div>
 </div>
 
 <style>
@@ -29,15 +31,25 @@
         text-align: center;
         /* Center-align text within the container */
     }
+    
+    #login-page-content{
+        margin: 6.2rem auto;
+    }
+
     .links-container p {
-    margin: 5px 0; /* Adjust margin for individual links */
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8); /* Adding shadow to the links */
-}
-.links-container{
-    margin-bottom: 20px;
-    margin-top: 10px;
-}
-.section-title h1 {
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8); /* Adding shadow to the h1 */
-}
+        margin: 5px 0;
+        /* Adjust margin for individual links */
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
+        /* Adding shadow to the links */
+    }
+
+    .links-container {
+        margin-bottom: 20px;
+        margin-top: 10px;
+    }
+
+    .section-title h1 {
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+        /* Adding shadow to the h1 */
+    }
 </style>
