--- a/src/public/css/highlightText.css
+++ b/src/public/css/highlightText.css
@@ -1,6 +1,4 @@
-  .highlight-txt {
-    color: rgb(98, 98, 232);
-      font-family: Arial, sans-serif;
-    }
-
-
+.highlight-txt {
+  color: #ef7f72;
+  font-family: "Poppins", sans-serif;
+}
