--- a/src/public/css/sectionTitle.css
+++ b/src/public/css/sectionTitle.css
@@ -4,8 +4,9 @@
       /*border-bottom: 2px solid #007bff; */ /* Change color as needed */
       padding-bottom: 5px;
       justify-items: center;
-      color: rgb(98, 98, 232);
+      color: #EF7F72;
       margin-bottom: 40px;
+      font-family: "Poppins", sans-serif;
     }
 
     body {
