--- a/src/views/templates/navbar2.ejs
+++ b/src/views/templates/navbar2.ejs
@@ -9,8 +9,8 @@
 
   <nav class="navbar">
     <!-- basic links -->
-    <a href="/" style="--i:0;">Home</a>
-    <a href="/#about" style="--i:1;">Acerca</a>
+    <a href="/#contact" style="--i:0;">Contacto</a>
+    <a href="/#about1" style="--i:1;">Acerca</a>
     <!-- Dropdown for Courses and Blogs -->
     <div class="dropdown">
       <a href="#" class="dropdown-toggle" role="button">
@@ -185,6 +185,7 @@
 
   @media (max-width: 768px) {
     /*MD ↓ *********************************/
+    
 
     .icons {
       display: inline-flex;
