--- a/src/public/css/home/home.css
+++ b/src/public/css/home/home.css
@@ -11,7 +11,7 @@
 
 .hero-logo {
   max-width: 50%; /* Adjust the logo size */
-  height: auto; /* Maintain aspect ratio */
+  max-height: 20rem; /* Maintain aspect ratio */
 }
 
 #contact {
@@ -25,6 +25,8 @@
   align-items: center; /* Center vertically */
   margin-top: 20px;
 }
+
+#about {}
 
 .backdrop-filter {
   background-color: rgba(255, 255, 255, 0.098); /* Adjust opacity as needed */
